--- a/CodeforcesFun.cabal
+++ b/CodeforcesFun.cabal
@@ -38,8 +38,8 @@ library
     , base >=4.7 && <5
     , bytestring
     , containers
+    , mtl
     , text
-    , unordered-containers
   default-language: Haskell2010
 
 executable CodeforcesFun-exe
@@ -57,8 +57,8 @@ executable CodeforcesFun-exe
     , base >=4.7 && <5
     , bytestring
     , containers
+    , mtl
     , text
-    , unordered-containers
   default-language: Haskell2010
 
 test-suite CodeforcesFun-test
@@ -77,6 +77,6 @@ test-suite CodeforcesFun-test
     , base >=4.7 && <5
     , bytestring
     , containers
+    , mtl
     , text
-    , unordered-containers
   default-language: Haskell2010
