--- a/package.yaml
+++ b/package.yaml
@@ -22,10 +22,10 @@ description:         Please see the README on GitHub at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - containers
-- unordered-containers
 - array
 - bytestring
 - text
+- mtl
 
 ghc-options:
 - -Wall
